refactoring planner.js into smaller js files

--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
         </ul>
     </div>
 
-    
-    <script src="planner.js" defer></script>
+    <script src="js/chars.js" defer></script>
+    <script src="js/loader.js" defer></script>
+    <script src="js/levels.js" defer></script>
+    <script src="js/ui.js" defer></script>
 </body>
 </html>
